@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.219 2006/02/04 20:01:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.220 2006/02/05 20:42:10 allanonjl Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
+  5 Feb 2006; John N. Laliberte <allanonjl@gentoo.org>
+  OtherSettings.py: Replacement for rc.conf screen.
+  
   4 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   initial working help
   help text for Welcome
